[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankbg-edit3.jpeg" type="Texture" id=1]
[ext_resource path="res://src/main/title/titleloading.tres" type="Animation" id=2]
[ext_resource path="res://src/main/title/LoadingScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tanklogo6-54.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-0.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-1.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/tank-battle.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-4.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-5.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-2.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-3.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-8.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-13.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-9.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-12.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-11.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-10.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-7.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-out.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in-6.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/progress-bar/progress-bar-in.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankui-edit--92.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/tank-edit/tank-edit/tankbg-edit2.jpeg" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 20 ) ],
"loop": false,
"name": "50",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 17 ) ],
"loop": false,
"name": "75",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ) ],
"loop": false,
"name": "25",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 21 ) ],
"loop": false,
"name": "100",
"speed": 5.0
} ]

[node name="LoadingScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="."]
margin_right = 240.0
margin_bottom = 135.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_top = -0.0925926
anchor_right = 1.0
anchor_bottom = 0.555556
margin_bottom = -100.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBarOut" type="TextureRect" parent="."]
margin_top = 888.0
margin_right = 960.0
margin_bottom = 943.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarIn" type="AnimatedSprite" parent="."]
position = Vector2( 960, 945 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "25"

[node name="Message" type="Label" parent="."]
margin_left = 360.0
margin_top = 900.0
margin_right = 3320.0
margin_bottom = 1204.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 7 )
text = "กำลังโหลด"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loading"
anims/loading = ExtResource( 2 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="BgCover" type="TextureRect" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="ColorRect" parent="UILayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgErrorMessage" type="TextureRect" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 22 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorMessage" type="Label" parent="UILayer/BgErrorMessage"]
anchor_left = 0.233333
anchor_top = 0.2
anchor_right = 0.766667
anchor_bottom = 0.844444
margin_right = 1536.0
margin_bottom = 1044.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "เกมเกิดข้อผิดพลาดไม่ทราบสาเหตุ กรุณารีเฟรชใหม่อีกครั้ง"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DebugMessage" type="Label" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 1024.0
margin_right = 7536.0
margin_bottom = 220.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = ExtResource( 7 )
text = "Debug : "
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
